--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,12 +24,26 @@
     />
     <!-- Custom CSS -->
     <link href="../dist/css/style.min.css" rel="stylesheet" />
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+   <style>
+     .alert {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 300px;
+      height: 50px;
+      border: 1px solid #d4edda;
+      border-radius: 5px;
+      background-color: #d4edda;
+      color: #155724;
+      z-index: 9999;
+      box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+   </style>
   </head>
 
   <body>
@@ -49,6 +63,17 @@
       <!-- ============================================================== -->
       <!-- Login box.scss -->
       <!-- ============================================================== -->
+
+     
+
+      <% if ( messages.length > 0) { %>
+        <div class="alert alert-danger" id="messages">
+          <p class="m-0"><%= messages[0] %></p>
+        </div>
+     <% } %>
+
+     
+
       <div
         class="
           auth-wrapper
@@ -69,7 +94,7 @@
             <!-- Form -->
             <form
               class="form-horizontal mt-3"
-              id="loginform"
+              id="loginform1"
               action="/loginProcess"
               method="post"
             >
@@ -122,7 +147,7 @@
                       </button>
                       <input
                         class="btn btn-success float-end text-white"
-                        type="submit"
+                        type="submit" name="login"
                       >
                       </input>
                       
@@ -174,6 +199,19 @@
         $("#recoverform").hide();
         $("#loginform").fadeIn();
       });
+    </script>
+    <script>
+const messageele = document.querySelector('#messages');
+
+
+
+
+setTimeout(() => {
+    if (messageele) {
+        messageele.style.display = 'none';
+    }
+}, 1500); 
+
     </script>
   </body>
 </html>
